@@ -56,6 +56,15 @@ class JPagination extends JObject
 	protected $_viewall = false;
 
 	/**
+	 * Additional URL parameters to be added to the pagination URLs generated by the class.  These
+	 * may be useful for filters and extra values when dealing with lists and GET requests.
+	 *
+	 * @var		array
+	 * @since	1.6
+	 */
+	protected $_additionalUrlParams = array();
+
+	/**
 	 * Constructor.
 	 *
 	 * @param	int		The total number of items.
@@ -110,6 +119,50 @@ class JPagination extends JObject
 		if ($this->limit == $total) {
 			$this->_viewall = true;
 		}
+	}
+
+	/**
+	 * Method to set an additional URL parameter to be added to all pagination class generated
+	 * links.
+	 *
+	 * @param	string	$key	The name of the URL parameter for which to set a value.
+	 * @param	mixed	$value	The value to set for the URL parameter.
+	 *
+	 * @return	mixed	The old value for the parameter.
+	 *
+	 * @since	1.6
+	 */
+	public function setAdditionalUrlParam($key, $value)
+	{
+		// Get the old value to return and set the new one for the URL parameter.
+		$result = isset($this->_additionalUrlParams[$key]) ? $this->_additionalUrlParams[$key] : null;
+
+		// If the passed parameter value is null unset the parameter, otherwise set it to the given value.
+		if ($value === null) {
+			unset($this->_additionalUrlParams[$key]);
+		}
+		else {
+			$this->_additionalUrlParams[$key] = $value;
+		}
+
+		return $result;
+	}
+
+	/**
+	 * Method to get an additional URL parameter to be added to all pagination class generated
+	 * links if it exists.
+	 *
+	 * @param	string	$key	The name of the URL parameter for which to get the value.
+	 *
+	 * @return	mixed	The value if it exists or null if it does not.
+	 *
+	 * @since	1.6
+	 */
+	public function getAdditionalUrlParam($key)
+	{
+		$result = isset($this->_additionalUrlParams[$key]) ? $this->_additionalUrlParams[$key] : null;
+
+		return $result;
 	}
 
 	/**
@@ -475,10 +528,20 @@ class JPagination extends JObject
 		// Initialise variables.
 		$data = new stdClass();
 
+		// Build the additional URL parameters string.
+		$params = '';
+		if (!empty($this->_additionalUrlParams))
+		{
+			foreach($this->_additionalUrlParams as $key => $value)
+			{
+				$params .= '&'.$key.'='.$value;
+			}
+		}
+
 		$data->all = new JPaginationObject(JText::_('View All'), $this->prefix);
 		if (!$this->_viewall) {
 			$data->all->base	= '0';
-			$data->all->link	= JRoute::_("&" . $this->prefix . "limitstart=");
+			$data->all->link	= JRoute::_($params.'&'.$this->prefix.'limitstart=');
 		}
 
 		// Set the start and previous data objects.
@@ -492,9 +555,9 @@ class JPagination extends JObject
 			$page = $page == 0 ? '' : $page; //set the empty for removal from route
 
 			$data->start->base	= '0';
-			$data->start->link	= JRoute::_("&" . $this->prefix . "limitstart=");
+			$data->start->link	= JRoute::_($params.'&'.$this->prefix.'limitstart=');
 			$data->previous->base	= $page;
-			$data->previous->link	= JRoute::_("&" . $this->prefix . "limitstart=".$page);
+			$data->previous->link	= JRoute::_($params.'&'.$this->prefix.'limitstart='.$page);
 		}
 
 		// Set the next and end data objects.
@@ -507,9 +570,9 @@ class JPagination extends JObject
 			$end  = ($this->get('pages.total') -1) * $this->limit;
 
 			$data->next->base	= $next;
-			$data->next->link	= JRoute::_("&" . $this->prefix . "limitstart=".$next);
+			$data->next->link	= JRoute::_($params.'&'.$this->prefix.'limitstart='.$next);
 			$data->end->base	= $end;
-			$data->end->link	= JRoute::_("&" . $this->prefix . "limitstart=".$end);
+			$data->end->link	= JRoute::_($params.'&'.$this->prefix.'limitstart='.$end);
 		}
 
 		$data->pages = array();
@@ -524,7 +587,7 @@ class JPagination extends JObject
 			if ($i != $this->get('pages.current') || $this->_viewall)
 			{
 				$data->pages[$i]->base	= $offset;
-				$data->pages[$i]->link	= JRoute::_("&" . $this->prefix . "limitstart=".$offset);
+				$data->pages[$i]->link	= JRoute::_($params.'&'.$this->prefix.'limitstart='.$offset);
 			}
 		}
 		return $data;
